public/styles/layouts/_default.scss
.layout--full {
  margin-left: auto;
  margin-right: auto;
  max-width: $full-width;

  figcaption {
    padding-left: $grid-pad;
    padding-right: $grid-pad;
    margin-left: auto;
    margin-right: auto;
    max-width: $full-width;

    @media screen and (min-width: $full-width + ($grid-pad * 2)) {
      padding-left: 0;
      padding-right: 0;
      max-width: none;
    }
  }
}

.layout--pad {
  padding-left: $grid-pad;
  padding-right: $grid-pad;
}

.layout--half {
  width: 50%;

  figure,
  aside {
    max-width: $full-width / 2;
    margin-left: $grid-pad;
    margin-right: $grid-pad;
  }
}

.layout--left {
  float: left;

  figure,
  aside {
    float: right;
  }
}

.layout--bleed {
  img {
    width: 100%;
    max-width: none;
  }

  figcaption {
    margin-left: $grid-pad;
    margin-right: $grid-pad;
  }
}

.layout--right {
  float: right;
}

.layout--hang {
  max-width: ($full-width * 2) + ($grid-pad * 2);
  margin: 0 auto;
}

.layout--hang figure {
  max-width: $full-width / 2;
}

.layout--hang {
  .layout--right,
  .layout--left {
    margin-left: $grid-pad;
    margin-right: $grid-pad;
  }
}

